<resources xmlns:tools="http://schemas.android.com/tools">

    <!--HomePage -->
    <string name="app_name" translatable="false">MediScan</string>
    <string name="or_" translatable="false">OR...</string>
    <string name="hi_amy">Hi, Amy</string>
    <string name="let_s_find_" translatable="false">Let\'s find\nyour Medical \nSheet Inquiry</string>
    <string name="medicine">MOUNJARO</string>
    <string name="lilly_s_med">Lilly\'s Medication\'s</string>

    <!--HomePage Grid Cards -->
    <string name="adcirca">Adcirca</string>
    <string name="alimta">Alimta</string>
    <string name="avyvid">Avyvid</string>
    <string name="baqsimi">Baqsimi</string>
    <string name="baricitinib">Baricitinib</string>
    <string name="basaglar">Basaglar</string>
    <string name="bebtelovimab">Bebtelovim...</string>
    <string name="cyramza">Cyramza</string>
    <string name="emgality">Emgality</string>
    <string name="erbitux">Erbitux</string>
    <string name="forteo">Forteo</string>
    <string name="glucagon">Glucagon</string>
    <string name="glyxambi">Glyxambi</string>
    <string name="humalogj">Humalog Junior</string>
    <string name="humalogfifty">Humalog 50/50</string>
    <string name="humalogsev">Humalog 75/25</string>
    <string name="humalog">Humalog</string>
    <string name="humalogtwo">Humalog 200</string>
    <string name="humatrope">Humatrope</string>
    <string name="humulinsev">Humulin 70/30</string>
    <string name="humulinN">Humulin N</string>
    <string name="humulinR">Humulin R</string>
    <string name="humulinRu">Humulin R U-500</string>
    <string name="insulinLI">Insulin Lispro</string>
    <string name="insulinLIJ">Insulin Lispro Junior Kiwi</string>
    <string name="insulinLIK">Insulin Lispro Kiwi</string>
    <string name="jardiance">Jardiance</string>
    <string name="jaypirca">Jaypirca</string>
    <string name="jentadueto">Jentadueto</string>
    <string name="jentaduetoXR">Jentadueto XR</string>
    <string name="lyumje">Lyumje</string>
    <string name="mounjaro">Mounjaro</string>
    <string name="olumiantI">Olumiant Immunology</string>
    <string name="olumiantC">Olumiant Covid</string>
    <string name="retevmo">Retevmo</string>
    <string name="reyvow">Reyvow</string>
    <string name="synjardy">Synjardy</string>
    <string name="synjardyXR">Synjardy XR</string>
    <string name="taltz">Taltz</string>
    <string name="tauvid">Tauvid</string>
    <string name="tradjenta">Tradjenta</string>
    <string name="trijardyXR">TrijardyXR</string>
    <string name="trulicity">Trulicity</string>
    <string name="verzenio">Verzenio</string>
    <string name="zyprexa">Zyprexa Relprevv</string>
    <string name="lily_medication">Lily Medication</string>

    <!-- Narrow Down Search -->
    <string name="summary">Summary</string>
    <string name="medical_she">Medical Sheet Categories</string>
    <string name="pop_up_title">MOUNJARO</string>
    <string name="pop_up_cat">Summary</string>
    <string name="pop_up_des">Omeprazole is used to treat certain stomach and esophagus problems (such as acid reflux, ulcers). It works by decreasing the amount of acid your stomach makes. It relieves symptoms such as heartburn, difficulty swallowing, and cough. This medicati ...</string>
    <string name="see_more_">See More?</string>

    <!--Results -->
    <string name="names_for_t">Names for this medication:</string>
    <string name="accordtitle">TBA</string>
    <string name="omeprazole_">Omeprazole is used to treat certain stomach and esophagus problems (such as acid reflux, ulcers). It works by decreasing the amount of acid your stomach makes. It relieves symptoms such as heartburn, difficulty swallowing, and cough. This medicati ...</string>
    <string name="describe">Please Select a medication....</string>
    <string name="brand_names">Brand Names:</string>
    <string name="tirzepatide">Tirzepatide injection</string>
    <string name="generic_nam">Generic Name:</string>
    <string name="mounjaros">MOUNJARO</string>
    <string name="medicationtitle">Medication:</string>
    <string name="medtitr">MOUNJARO</string>
    <string name="collapse_al"><u>Collapse All</u></string>
    <string name="expand_al"><u>Expand All</u></string>
    <string name="see_pdf">See PDF</string>

    <!-- Saved Page -->
    <string name="remind"><i>Set Reminders</i></string>
    <string name="recmedname">MOUNJARO</string>
    <string name="rec_medi">Search\nMedication</string>
    <string name="saved">Saved Medicines</string>
    <string name="savedmore">Save More</string>
    <string name="savedcardtext">MOUNJARO</string>
    <string name="spnote">MOUNJARO</string>
    <string name="special">Special Notes</string>
    <string name="specialnote">Add Note</string>
    <string name="scroll">scroll</string>

    <!-- Saved Remind PopUp Page -->
    <string name="remindtitle">Set Reminder</string>
    <string name="remindsearch">Select A Medicine</string>
    <string name="detailremind">Enter Details</string>
    <string name="selctTime">Select Time</string>
    <string name="add">Add</string>
    <string name="cancle">Cancle Reminder</string>

    <string-array name="allergies">

        <item>Select Medicine</item>
        <item>Adcirca</item>
        <item>Alimta</item>
        <item>Amyvid</item>
        <item>Baqsimi</item>
        <item>Baricitinib</item>
        <item>Basaglar</item>
        <item>Bebtelovimab</item>
        <item>Cyramza</item>
        <item>Emgality</item>
        <item>Erbitux</item>
        <item>Forteo</item>
        <item>Glucagon</item>
        <item>Glyxambi</item>
        <item>Humalog</item>
        <item>Humalog 50/50</item>
        <item>Humalog Junior</item>
        <item>Humalog 75/25</item>
        <item>Humatrope</item>
        <item>Humulin N</item>
        <item>Humulin R</item>
        <item>Humulin R U-500</item>
        <item>Humulin 70/30</item>
        <item>Insulin Lispro</item>
        <item>Insulin Lispro Kiwi</item>
        <item>insulinlli</item>
        <item>Jardiance</item>
        <item>Jaypirca</item>
        <item>Jentadueto</item>
        <item>Lyumjev</item>
        <item>Mounjaro</item>
        <item>Olumiantc</item>
        <item>Retevmo</item>
        <item>Reyvow</item>
        <item>Synjardy</item>
        <item>Synjardy XR</item>
        <item>Taltz</item>
        <item>Tauvid</item>
        <item>Tradjenta</item>
        <item>Trijardyxr</item>
        <item>Trulicity</item>
        <item>Verzenio</item>
        <item>Zyprexa</item>
    </string-array>
    <string name="save_a_medi">Save A Medication from the narrow search page</string>
    <string name="noteempty">Click Add Button to Add Note</string>

    <!--    Profiles Page -->
    <string name="profiletext">Profile</string>
    <string name="todo">TODO</string>
    <string name="edit">Edit Profile</string>
    <string name="profile_remind"><i>Set Reminders</i></string>
    <string name="profile_remindcard">Add \nReminder</string>

    <string name="profile_name">Name</string>
    <string name="profile_name_input">Briana</string>

    <string name="profile_phone">Phone</string>
    <string name="profile_phone_input">555-555-5555</string>

    <string name="profile_email">Email</string>
    <string name="profile_email_input">Briana115@gmail.com</string>

    <string name="profile_dob">Date of Birth</string>
    <string name="profile_dob_input">12/12/2005</string>

    <string name="profile_allergies">Allergies</string>
    <string name="profile_allergies_input">Soy</string>

    <string name="profile_drugs">Drugs Taken</string>
    <string name="profile_drugs_input">Monj</string>
    <string name="medical_inq">Medical Inquiry?</string>
    <string name="profile_emailLink">Email</string>
    <string name="profile_sign_out">Sign Out</string>

    <!--Login Page-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_pw">Password</string>
    <string name="new_user_prompt">New User?</string>
    <string name="join_prompt">Join Us</string>
    <string name="forgotpwprompt">Forgot Password?</string>
    <string name="forgotpwprompthint">Enter Email</string>
    <string name="old_user_prompt">Already Have Account?</string>


<!--    Register Page-->

        <string name="app_names">SpinnerInKotlin</string>
        <string name="selected_item">Selected item:</string>
    <string name="user_username_reg">UserName</string>
    <string name="user_first_name_reg">First Name</string>
    <string name="user_last_name_reg">Last Name</string>
    <string name="user_email_reg">Email</string>
    <string name="user_password_reg">Password</string>
    <string name="user_dob_reg">Date Of Birth</string>
    <string name="user_phone_reg">Phone</string>
    <string name="user_allergies_reg">Allergies</string>
    <string name="user_drugstaken_reg">Drugs Taaken</string>
    <string-array name="defaultText">
        <item>Allergies</item>
    </string-array>

    <string-array name="allergies_list">

    </string-array>

        <!--Edit Profile-->
    <string name="editprofbutton">Done</string>
    <string name="editImg">Upload Image</string>
    <string name="todot">TODO</string>
</resources>