<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:contentDescription="@string/scroll">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >

        <View
            android:id="@+id/profilerect"
            android:layout_width="wrap_content"
            android:layout_height="184dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="-24dp"
            android:background="@drawable/profile_top_rect" />

        <TextView
            android:id="@+id/profiletext"
            android:layout_width="77dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal"
            android:scaleType="centerInside"
            android:text="@string/profiletext"
            android:textAppearance="@style/profiletext" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_img"
            android:layout_width="142dp"
            android:layout_height="142dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="96dp"
            android:background="@drawable/profilecircle"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            app:shapeAppearanceOverlay="@style/Rounded"
            android:scaleType="centerCrop"
            android:src="@drawable/prof"
            />

        <Button
            android:id="@+id/edit_p"
            android:layout_width="105dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="69dp"
            android:layout_marginTop="247dp"
            android:background="@drawable/profile_editbutton"
            android:padding="2dp"
            android:text="@string/edit"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/icons"
            android:layout_width="51dp"
            android:layout_height="251dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="312dp"
            android:background="@drawable/profile" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="59dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="310dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:text="@string/profile_name"
            android:textAppearance="@style/profile_name" />

        <TextView
            android:id="@+id/profile_name_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/profile_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="-4dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:maxLines="1"
            android:text="@string/profile_name_input"
            android:textAppearance="@style/profile_name_input" />

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="59dp"
            android:layout_height="18dp"
            android:layout_below="@+id/profile_name_input"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="31dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:text="@string/profile_phone"
            android:textAppearance="@style/profile_name" />

        <TextView
            android:id="@+id/profile_phone_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/profile_phone"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="-4dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:maxLines="1"
            android:text="@string/profile_phone_input"
            android:textAppearance="@style/profile_name_input" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="59dp"
            android:layout_height="18dp"
            android:layout_below="@+id/profile_phone_input"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:text="@string/profile_email"
            android:textAppearance="@style/profile_name" />

        <TextView
            android:id="@+id/profile_email_input"
            android:layout_width="228dp"
            android:layout_height="25dp"
            android:layout_below="@+id/profile_email"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="-4dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:maxLines="1"
            android:text="@string/profile_email_input"
            android:textAppearance="@style/profile_name_input" />

        <TextView
            android:id="@+id/profile_dob"
            android:layout_width="59dp"
            android:layout_height="18dp"
            android:layout_below="@+id/profile_email_input"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:text="@string/profile_dob"
            android:textAppearance="@style/profile_name" />

        <TextView
            android:id="@+id/profile_dob_input"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/profile_dob"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="-4dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:gravity="top"
            android:maxLines="1"
            android:text="@string/profile_dob_input"
            android:textAppearance="@style/profile_name_input" />

        <TextView
            android:id="@+id/medical_inq"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_below="@+id/profile_dob_input"
            android:layout_alignParentStart="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="top"
            android:text="@string/medical_inq"
            android:textAppearance="@style/medical_inq" />

        <TextView
            android:id="@+id/profile_emailLink"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_below="@+id/profile_dob_input"
            android:layout_alignParentStart="true"
            android:layout_marginStart="161dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="top"
            android:text="@string/profile_emailLink"
            android:textAppearance="@style/profile_emailLink" />

        <TextView
            android:id="@+id/profile_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_below="@+id/profile_dob_input"
            android:layout_alignParentStart="true"
            android:layout_marginStart="262dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="end|center_vertical"
            android:lineSpacingExtra="19sp"
            android:text="@string/profile_sign_out"
            android:textAppearance="@style/profile_sign_out" />

        <View
            android:id="@+id/spacer"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/profile_emailLink"
            android:layout_marginTop="18dp"
            android:background="#FFFFFF" />
    </RelativeLayout>


</ScrollView>