<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:contentDescription="@string/scroll"
    tools:context=".LoginScreen"
    android:clickable="true"
    android:focusableInTouchMode="true"

    android:focusable="true">


        <View
            android:id="@+id/loginrect"
            android:layout_width="wrap_content"
            android:layout_height="360dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/user_redrect" />

        <View
            android:id="@+id/login_white_rect"
            android:layout_width="wrap_content"
            android:layout_height="360dp"
            android:layout_below="@+id/logintitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="41dp"
            android:background="@drawable/user_roundrect" />

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="98dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="59dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal|top"
        android:text="@string/login"
        android:textAppearance="@style/login" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/login_email"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_white_rect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/user_input_line"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textAlignment="textStart"
        android:textColorHint="#000000"
        app:boxStrokeColor="#0B0B0B"
        app:boxStrokeErrorColor="#00FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15.5dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#000000"
            android:fontFamily="@font/inter_semibold"
            android:gravity="start"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="24sp"

            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/login_pw"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_centerInParent="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/user_input_line"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textAlignment="textStart"
        android:textColorHint="#000000"
        android:windowSoftInputMode="stateHidden"
        app:boxStrokeColor="#00FFFFFF"
        tools:ignore="NotSibling">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pw_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15.5dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#000000"
            android:fontFamily="@font/inter_semibold"
            android:gravity="start"
            android:hint="@string/hint_pw"
            android:inputType="textPassword"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="24sp"

            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:layout_below="@+id/login_pw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/inter_semibold"
        android:padding="2dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/new_user_prompt"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/login_button"
        android:layout_alignStart="@+id/login_button"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="top"
        android:text="@string/new_user_prompt"
        android:textAppearance="@style/medical_inq" />

    <TextView
        android:id="@+id/signup_up_prompt"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/login_button"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/new_user_prompt"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_semibold"
        android:gravity="top"
        android:text="@string/join_prompt"
        android:textAppearance="@style/profile_emailLink"
        android:textColor="#BACF2727"
        tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/forgotpw"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/new_user_prompt"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_semibold"
        android:gravity="top"
        android:text="@string/forgotpwprompt"
        android:textAppearance="@style/profile_emailLink"
        android:textColor="#BA221F1F"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/login_pills_img"
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:layout_below="@+id/forgotpw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_pillslogin"
        android:scaleType="matrix" />


</RelativeLayout>