<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rect_filledsaved"
    android:layout_width="113dp"
    android:layout_height="107dp"
    android:layout_margin="7dp"
    android:background="@null"
    app:cardBackgroundColor="@null"
    android:outlineProvider="none">

    <RelativeLayout
        android:id="@+id/savedfill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/savedcardbgfill"
        android:orientation="vertical"
        android:visibility="invisible">


        <TextView
            android:id="@+id/savetextid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="38dp"
            android:gravity="center"
            android:lineSpacingExtra="18sp"
            android:text="@string/savedcardtext"
            android:textAppearance="@style/savedcardtext"
            android:ellipsize="end"
            android:maxLines="1"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/emptysaved"
        android:layout_width="113dp"
        android:layout_height="107dp"
        android:background="@drawable/savedemptycardtop"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/nscs_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/lily_medication"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/nscs_title"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="-5dp"
            android:background="@null"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/savedmore"
            android:textAlignment="gravity"
            android:textAppearance="@style/rec_medi"
            android:textColor="#3D3D3D"
            android:textColorLink="#F11212"
            tools:ignore="TextContrastCheck"
            />

    </LinearLayout>


</androidx.cardview.widget.CardView>