<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rect_fillednotes"
    android:layout_width="113dp"
    android:layout_height="88dp"
    android:layout_margin="7dp"
    android:background="@null"
    app:cardBackgroundColor="@null"
    android:outlineProvider="none">

    <RelativeLayout
        android:id="@+id/notesfill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/savedcardbgfill"
        android:orientation="vertical"
        android:visibility="invisible">


        <TextView
            android:id="@+id/noteid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="28dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lineSpacingExtra="18sp"
            android:maxLines="1"
            android:text="@string/spnote"
            android:textAppearance="@style/savedcardtext" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/emptynotes"
        android:layout_width="113dp"
        android:layout_height="match_parent"
        android:background="@drawable/savedemptycardtop"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/nscsp_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/lily_medication"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/nscsp_title"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="-10dp"
            android:background="@null"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/specialnote"
            android:textAlignment="gravity"
            android:textAppearance="@style/rec_medi"
            android:textColor="#3D3D3D"
            android:textColorLink="#F11212"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</androidx.cardview.widget.CardView>