<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rect_filled"
    android:layout_width="95dp"
    android:layout_height="103dp"
    android:layout_margin="7dp"
    android:background="@null"
    android:outlineProvider="none">

    <LinearLayout
        android:id="@+id/plin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/profile_card_image"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:adjustViewBounds="true"
            android:background="@drawable/reccentcardtop"
            android:contentDescription="@string/lily_medication"
            android:scaleType="centerInside"
            android:src="@drawable/ic_pillsrec"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/profile_card_title"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:background="@drawable/reccentcardbot"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/recmedname"
            android:textAlignment="gravity"
            android:textAppearance="@style/recmedname"
            android:textColor="#000000"
            android:textColorLink="#F11212"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pelin"
        android:layout_width="95dp"
        android:layout_height="match_parent"
        android:background="@drawable/reccentemptycardtop"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_empty_card_image_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/lily_medication"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/profile_empty_card_title"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="-5dp"
            android:background="@null"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/profile_remindcard"
            android:textAlignment="gravity"
            android:textAppearance="@style/rec_medi"
            android:textColor="#3D3D3D"
            android:textColorLink="#F11212"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</androidx.cardview.widget.CardView>